--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -27,16 +27,16 @@
 
 \renewcommand\Affilfont{\small}
 
-\title{\textbf{Classifying Theta-Curves and Handcuff Graphs up to 7 Crossing by Arc Index(가제)}}
-\author[1]{Cho Eunchan\thanks{24-097@ksa.hs.kr}}
-\author[1]{Jeongwon Shin\thanks{io25jellyfish@gmail.com}}
-\author[1]{Boyeon Seo\thanks{24-044@ksa.hs.kr}}
-\author[1]{Minho Choi\thanks{24-104@ksa.hs.kr}}
-\author[2]{Kim Hun\thanks{이메일}}
-\author[3]{진교택\thanks{이메일}}
+\title{\textbf{Minimal Grid Diagrams of Theta-Curves and Handcuff Graphs up to 7 Crossings}}
+\author[1]{Eunchan Cho}
+\author[1]{Jeongwon Shin}
+\author[1]{Boyeon Seo}
+\author[1]{Minho Choi}
+\author[2]{Hun Kim}
+\author[3]{Gyotaek Jin}
 \affil[1]{Researcher, Korea Scinece Academy of KAIST}
-\affil[2]{Supervisor, Department of Mechanical Engineering, \LaTeX\ University}
-\affil[3]{Co-Supervisor, Department of Computer Science, \LaTeX\ University}
+\affil[2]{Supervisor, Korea Science Academy of KAIST}
+\affil[3]{Co-Supervisor, Department of Mathematical Sciences, Korea Advanced Institute of Scienceand Technology}
 
 
 \renewcommand\Authands{ and }
