--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -46,7 +46,21 @@
 \date{\vspace{-5ex}}
 
 \begin{document}
-\maketitle
+
+\begin{center}
+    {\LARGE \textbf{엇갈림수 7 이하의 세타 커브와 핸드커프 그래프의 최소 그물그림}\par}
+    \vspace{0.3cm}
+    {\large 조은찬\textsuperscript{1}, 신정원\textsuperscript{1}, 서보연\textsuperscript{1}, 최민호\textsuperscript{1}, 김훈\textsuperscript{2}, 진교택\textsuperscript{3}}\\
+    {\large \textsuperscript{1}연구자, 한국과학영재학교 \par \textsuperscript{2}책임지도자, 한국과학영재학교 \par \textsuperscript{3}공동지도자, 한국과학기술원 수리과학과\par}
+
+    \vspace{1cm} % 한글/영문 사이 간격
+
+    {\LARGE \textbf{Minimal Grid Diagrams of Theta-Curves and Handcuff Graphs up to 7 Crossings}\par}
+    \vspace{0.3cm}
+    {\large Eunchan Cho\textsuperscript{1}, Jeongwon Shin\textsuperscript{1}, Boyeon Seo\textsuperscript{1}, Minho Choi\textsuperscript{1}, Hun Kim\textsuperscript{2}, Gyotaek Jin\textsuperscript{3}}\\
+    {\large \textsuperscript{1}Researcher, Korea Science Academy of KAIST \par \textsuperscript{2}Supervisor, Korea Science Academy of KAIST\par \textsuperscript{3}Co-Supervisor, Department of Mathematical Sciences, Korea Advanced Institute of Science and Technology}
+\end{center}
+
 \renewenvironment{abstract}
 {\begin{quote}
 \noindent \rule{\linewidth}{.5pt}\par{\bfseries \abstractname.}}
