--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -47,11 +47,29 @@
 
 \begin{document}
 
+
+
 \begin{center}
     {\LARGE \textbf{엇갈림수 7 이하의 세타 커브와 핸드커프 그래프의 최소 그물그림}\par}
     \vspace{0.3cm}
     {\large 조은찬\textsuperscript{1}, 신정원\textsuperscript{1}, 서보연\textsuperscript{1}, 최민호\textsuperscript{1}, 김훈\textsuperscript{2}, 진교택\textsuperscript{3}}\\
     {\large \textsuperscript{1}연구자, 한국과학영재학교 \par \textsuperscript{2}책임지도자, 한국과학영재학교 \par \textsuperscript{3}공동지도자, 한국과학기술원 수리과학과\par}
+
+    \renewenvironment{abstract}
+    {\begin{quote}
+    \noindent \rule{\linewidth}{.5pt}\par{\bfseries \abstractname.}}
+    {\medskip\noindent \rule{\linewidth}{.5pt}
+    \end{quote}
+    }
+
+    \renewcommand{\abstractname}{초록}
+
+
+    \begin{abstract}
+        한글 한 글 하 ㄴ 글 한ㄱ ㅡㄹ 한 글 한글\\
+        \textbf{중심어 : theta-curve, handcuff graph, arc index, Yamada polynomial}
+        \\
+    \end{abstract}
 
     \vspace{1cm} % 한글/영문 사이 간격
 
