--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -116,7 +116,7 @@ Then we tried to decrease the gap of upper and lower bounds, and found out arc i
 
 \textit{Handcuff graph} consists of two loops and an edge joining the loops. In the projection of the handcuff graph, the section where handcuff graph meets itself is named \textit{crossing}. If the one handcuff graph and other handcuff graph's continuous transform of the graph is same, these graphs are \textit{equivalent}. Similar with the theta-curve, the \textit{generalized Reidemeister move} is used to transfrom a projection of handcuff graph.\\
 
-\begin{figure*}
+\begin{figure*}[h]
     \centerline{\includegraphics[width=0.5\textwidth]{generalized_reidemeister.png}}
     \caption{Generalized Reidemeister moves.}
     \label{figure_1} 
@@ -139,7 +139,7 @@ The \textit{link with $n$-components} is an embedding of the disjoint union of $
 
 The polynomial of the knot is invariant. \textit{Yamada polynomial} is invariant when it is mulitplied $(-x)^n$ for some integer n. The \textit{span} of a knot, is substraction of maximal degree of minimal degree of the polynomial. It is a invariant since Yamada polynomial is invariant when mulitplied by $(-x)^n$.\\
 
-\begin{figure*}
+\begin{figure*}[h]
     \centerline{\includegraphics[width=0.75\linewidth]{yamada_property.png}}
     \caption{Properties of Yamada polynomial.}
     \label{figure_3}
