--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -54,6 +54,13 @@
 \end{quote}
 }
 
+\begin{abstract}
+본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림 수(crossing number) $7$까지의 $\theta$-곡선($\theta$-curve)과 수갑 그래프(handcuff graph)에서의 최소 격자 그래프(minimal grid diagram)을 구함으로써 그들의 호 지수(arc index)를 확정시키고자 하였다. 또한 그 과정에서 호 지수의 상한과 하한을 구할 수 있었으며, 야마다 다항식(yamada polynomial)을 통해 파이썬 프로그램을 작성하여 이를 확인해 보닸다.  
+    \\ \\
+\textbf{Keywords : theta-curve, handcuff graph, arc index, Yamada polynomial}
+\\
+\end{abstract}
+
 
 \begin{abstract}
 Our purpose of this research is classifying theta-curves and handcuff graphs by their arc indices, which their crossing is up to 7.
