--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -50,7 +50,7 @@
 
 
 \begin{center}
-    {\LARGE \textbf{엇갈림수 7 이하의 세타 커브와 수갑 그래프의 최소 그물그림}\par}
+    {\LARGE \textbf{엇갈림수 7 이하의 세타커브와 수갑 그래프의 최소 그물그림}\par}
     \vspace{0.3cm}
     {\large 조은찬\textsuperscript{1}, 신정원\textsuperscript{1}, 서보연\textsuperscript{1}, 최민호\textsuperscript{1}, 김훈\textsuperscript{2}, 진교택\textsuperscript{3}}\\
     {\large \textsuperscript{1}연구자, 한국과학영재학교 \par \textsuperscript{2}책임지도자, 한국과학영재학교 \par \textsuperscript{3}공동지도자, 한국과학기술원 수리과학과\par}
@@ -66,8 +66,8 @@
 
 
     \begin{abstract}
-        본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림 수(crossing number) $7$까지의 $\theta$-곡선($\theta$-curve)과 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)을 구함으로써 그들의 호 지수(arc index)를 확정시키고자 하였다. 또한 그 과정에서 호 지수의 상한과 하한을 구할 수 있었으며, 야마다 다항식(yamada polynomial)을 통해 파이썬 프로그램을 작성하여 이를 확인해 보닸다.\\ \\
-        \textbf{중심어 : $\theta$-곡선, 수갑 그래프, 호 지수, 최소 그물 그림}
+        본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림 수(crossing number) $7$까지의 $\theta$-커브($\theta$-curve)과 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)을 구함으로써 그들의 호 지수(arc index)를 확정시키고자 하였다. 또한 그 과정에서 호 지수의 상한과 하한을 구할 수 있었으며, 야마다 다항식(yamada polynomial)을 통해 파이썬 프로그램을 작성하여 이를 확인해 보닸다.\\ \\
+        \textbf{중심어 : $\theta$-커브, 수갑 그래프, 호 지수, 최소 그물 그림}
         \\
     \end{abstract}
 
