--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -66,7 +66,7 @@
 
 
     \begin{abstract}
-        본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림 수(crossing number) $7$까지의 $\theta$-커브($\theta$-curve)과 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)을 구함으로써 그들의 호 지수(arc index)를 확정시키고자 하였다. 또한 그 과정에서 호 지수의 상한과 하한을 구할 수 있었으며, 야마다 다항식(yamada polynomial)을 통해 파이썬 프로그램을 작성하여 이를 확인해 보닸다.\\ \\
+        본 연구에서는 공간 그래프(spatial graph), 특히 엇갈림수(crossing number) $7$까지의 $\theta$-커브($\theta$-curve)과 수갑 그래프(handcuff graph)에서의 최소 그물 그림(minimal grid diagram)을 구함으로써 그들의 호 지수(arc index)를 확정시키고자 하였다. 또한 그 과정에서 호 지수의 상한과 하한을 구할 수 있었으며, 야마다 다항식(yamada polynomial)에 기반한 파이썬 프로그램을 작성하여 이를 확인해 보았다.\\ \\
         \textbf{중심어 : $\theta$-커브, 수갑 그래프, 호 지수, 최소 그물 그림}
         \\
     \end{abstract}
@@ -89,25 +89,23 @@
 \begin{abstract}
 Our purpose of this research is classifying theta-curves and handcuff graphs by their arc indices, which their crossing is up to 7.
 We tried to find those arc indices by proving lower bounds and upper bounds of the theta-curves and handcuff graphs.
-Also we programmed Python code that returns Cromwell matrix of the theta curves which have crossing up to 7.
+Also we programmed Python code that returns the minimal grid diagram of the theta curves and handcuff graphs which have crossing up to 7.
 Yamada polynomial was used to prove bounds and programming the Python code.\\ \\
 \textbf{Keywords : theta-curve, handcuff graph, arc index, minimal grid diagram}
 \\
 \end{abstract}
 
 
-\section{Introduction}
-Knot theory is a field of mathematics that studies simple closed curves embedded in three-dimensional space.
-Study of theta-curves and handcuff graphs is included in knot theory.
-In this research, we tried to classify those graphs by their arc indices, which are up to 7 crossings.\\
+\section{서론}
+매듭 이론(Knot theory)은 3차원 공간에 매장된 단순 폐곡선을 연구하는 수학의 한 분야이다.
+그 일부로서, 본 연구에서는 세타-곡선(theta-curve)과 수갑 그래프(handcuff graph)라고 불리는 특별한 매듭들에 대한 연구를 진행하였다.
+구체적으로는 엇갈림수가 7 이하인 경우에 대해, 이러한 그래프들의 최소 그물 그림(minimal grid diagram)을 찾고, 호 지수(arc index)를 구하고자 하였다. \\
+
+우선 최소 그물 그림을 찾기 위해 Python 코드를 활용하기로 하였다. 이들 그래프에 대한 모든 가능한 크롬웰 행렬(cromwell matrix)을 구하고, 각 그래프의 야마다 다항식(Yamada polynomial)을 계산하여 비교하면 최소 그물 그림을 구할 수 있을 것이라고 생각했다. 이에 세타 커브와 수갑 그래프의 크롬웰 행렬을 통해 두 그래프를 구분하는 방법을 찾았으나, Python의 Topoly 라이브러리에서 문제가 존재하여 야마다 다항식을 계산할 수 없었다.
 
 
-We first decided to used the Python code to examine the arc index.
-For this, we found the method classifying theta-curve and handcuff graphs by Cromwell matrix.
-Finding all possible matrices for those graphs and finding out the Yamada polynomial of each graphs could give the minimal arc index of the graph, but the Topoly library of the Python did not work, so we could not examine the Yamada polynomial.
-So, we found out the smallest Cromwell matrix by hand with using the bounds of the arc index, and used the Python code to examine if we found the right Cromwell matrices.
-Then we tried to decrease the gap of upper and lower bounds, and found out arc indices of some graphs.
-
+따라서 우리는 호 지수의 상·하한(bound)을 활용하여 수작업으로 최소 그물 그림을 구한 뒤, Python 코드를 사용해 해당 그물 그림이 올바른지를 검증하였다.
+그 후 상·하한의 간극을 줄여 나가면서 일부 그래프의 호 지수를 결정할 수 있었다.
 \section{Theoretical Background}
 
 
