--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -103,9 +103,10 @@ Yamada polynomial was used to prove bounds and programming the Python code.\\ \\
 
 우선 최소 그물 그림을 찾기 위해 Python 코드를 활용하기로 하였다. 이들 그래프에 대한 모든 가능한 크롬웰 행렬(cromwell matrix)을 구하고, 각 그래프의 야마다 다항식(Yamada polynomial)을 계산하여 비교하면 최소 그물 그림을 구할 수 있을 것이라고 생각했다. 이에 세타 커브와 수갑 그래프의 크롬웰 행렬을 통해 두 그래프를 구분하는 방법을 찾았으나, Python의 Topoly 라이브러리에서 문제가 존재하여 야마다 다항식을 계산할 수 없었다.
 
+따라서 우리는 호 지수의 상·하한을 활용하여 최소 그물 그림을 구한 뒤, Python 코드를 사용해 해당 그물 그림이 올바른지를 검증하였다.
+그 후 상·하한의 간극을 줄여 나가면서 일부 그래프의 호 지수를 결정할 수 있었다. \\
+이를 통해서 
 
-따라서 우리는 호 지수의 상·하한(bound)을 활용하여 수작업으로 최소 그물 그림을 구한 뒤, Python 코드를 사용해 해당 그물 그림이 올바른지를 검증하였다.
-그 후 상·하한의 간극을 줄여 나가면서 일부 그래프의 호 지수를 결정할 수 있었다.
 \section{Theoretical Background}
 
 
