--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -367,13 +367,13 @@ The number of the simple cap of the graph $G$ is invariant if least one of the e
     In a handcuff curve, the \textit{link component} is a union of the loops from each vertex to itself.
 \end{defn}
 
-\begin{theorem}[뭐시기뭐시기 출처모름]
+\begin{theorem}[Cromwell, P. R.]
     If $L$ is an alternating and non-split link, then
     \[ \alpha(L) = c(L)+2. \]
     %crossing number 정의를 써야하나???
 \end{theorem}
 
-\begin{theorem}[뭐시기뭐시기 출처모름]
+\begin{theorem}[Lee, M. J., No, S., \& Oh, S.]
     For any spatial graph $H$,
     \[ \alpha(H) \leq c(H)+e+b, \]
     where $e$ is the number of the edge and $b$ is the number of the bouquet.
@@ -434,17 +434,16 @@ The Python Code did not work since the Topoly Library had error of the Yamada po
 \section{Conclusion}
 요약, 더 나아가서 어떻게 써먹을 수 있을지?
 
-\begin{thebibliography}{9}
-    \bibitem{lamport94}
-    Leslie Lamport.
-    \newblock \LaTeX: A Document Preparation System.
-    \newblock Addison Wesley, Reading, Massachusetts, second edition, 1994.
-    
-    \bibitem{knuth84}
-    Donald E. Knuth.
-    \newblock The \TeX book.
-    \newblock Addison Wesley, Reading, Massachusetts, 1984.
-\end{thebibliography}
+\section*{References}
+    \begin{enumerate}
+      \item Yoonsang Lee. (2023). \textit{A Study on Arc Index of Theta-Curves}. Korea Science Academy of KAIST
+      \item Lee, H. J., Hong, K., Lee, H., \& Oh, S. (2014). Mosaic number of knots. \textit{Journal of Knot Theory and Its Ramifications, 23}(13), 1450069.
+      \item Lee, M. J., No, S., \& Oh, S. (2018). Arc index of spatial graphs. \textit{Journal of Graph Theory, 90}(3), 406–415.
+      \item Moriuchi, H. (2019). A table of $\theta$-curves and handcuff graphs with up to seven crossings. \textit{Advanced Studies in Pure Mathematics}, 281–290.
+      \item Yamada, S. (1989). An invariant of spatial graphs. \textit{Journal of Graph Theory, 13}(5), 537–551.
+      \item Cromwell, P. R. (1995b). Embedding knots and links in an open book I: Basic properties. \textit{Topology and Its Applications, 64}(1), 37–58.
+    \end{enumerate}
+
 
 
 \end{document}
