--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -96,16 +96,10 @@ Yamada polynomial was used to prove bounds and programming the Python code.\\ \\
 \end{abstract}
 
 
-\section{서론}
-매듭 이론(Knot theory)은 3차원 공간에 매장된 단순 폐곡선을 연구하는 수학의 한 분야이다.
-그 일부로서, 본 연구에서는 세타-곡선(theta-curve)과 수갑 그래프(handcuff graph)라고 불리는 특별한 매듭들에 대한 연구를 진행하였다.
-구체적으로는 엇갈림수가 7 이하인 경우에 대해, 이러한 그래프들의 최소 그물 그림(minimal grid diagram)을 찾고, 호 지수(arc index)를 구하고자 하였다. \\
-
-우선 최소 그물 그림을 찾기 위해 Python 코드를 활용하기로 하였다. 이들 그래프에 대한 모든 가능한 크롬웰 행렬(cromwell matrix)을 구하고, 각 그래프의 야마다 다항식(Yamada polynomial)을 계산하여 비교하면 최소 그물 그림을 구할 수 있을 것이라고 생각했다. 이에 세타 커브와 수갑 그래프의 크롬웰 행렬을 통해 두 그래프를 구분하는 방법을 찾았으나, Python의 Topoly 라이브러리에서 문제가 존재하여 야마다 다항식을 계산할 수 없었다.
-
-따라서 우리는 호 지수의 상·하한을 활용하여 최소 그물 그림을 구한 뒤, Python 코드를 사용해 해당 그물 그림이 올바른지를 검증하였다.
-그 후 상·하한의 간극을 줄여 나가면서 일부 그래프의 호 지수를 결정할 수 있었다. \\
-이를 통해서 
+\section{Introduction}
+Knot theory is a field of mathematics that studies simple closed curves embedded in three-dimensional space. Study of theta-curves and handcuff graphs is included in knot theory. In this research, we tried to get the minimal grid diagrams of those graphs, which are up to 7 crossings.\\ 
+We first decided to use the Python code to examine the minimal grid diagrams of $\theta$-curves and handcuff graphs. For this, we found the method to classify theta-curve and handcuff graphs by their Cromwell matrices, which are called THC matrices. Finding all possible matrices for those graphs and finding out the Yamada polynomial of each graphs could give the minimal grid diagram of the graph. \\
+Also, we used some mathematical methods to found out the minimal grid diagrams by using the bounds of the arc index, and used the Python code to examine if we found the right grid diagrams. Then we tried to decrease the gap of upper and lower bounds, and found out arc indices of some graphs.
 
 \section{Theoretical Background}
 
