--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -103,10 +103,22 @@ Also, we used some mathematical methods to found out the minimal grid diagrams b
 
 \section{Theoretical Background}
 
+\begin{defn}
+    \textit{$\theta$-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges. 
+\end{defn}
+\begin{defn}
+    \textit{Handcuff graph} consists of two loops and an edge joining the loops.
+\end{defn}
 
-\textit{Theta-curve} is a spatial knot on 3-sphere which has 2 vertices and 3 edges. In the projection of the theta-curve, the section where theta-curve meets itself is named \textit{crossing}. If the one theta-curve and other theta-curve's continuous transform of the graph is same, these curves are \textit{equivalent}. To transform a projection of theta-curve, the \textit{generalized Reidemeister move} is used.\\
+\begin{figure*}[h]
+    \centerline{\includegraphics[width=0.5\textwidth]{figure/theta and handcuff graph.png}}
+    \caption{Examples of $\theta$-curves and handcuff graphs.}
+    \label{figure_1} 
+\end{figure*}
 
-\textit{Handcuff graph} consists of two loops and an edge joining the loops. In the projection of the handcuff graph, the section where handcuff graph meets itself is named \textit{crossing}. If the one handcuff graph and other handcuff graph's continuous transform of the graph is same, these graphs are \textit{equivalent}. Similar with the theta-curve, the \textit{generalized Reidemeister move} is used to transfrom a projection of handcuff graph.\\
+In the projection of the handcuff graph(or $\theta$-curve), the section where handcuff graph(or $\theta$-curve) meets itself is named \textit{crossing}. 
+If the one handcuff graph or $\theta$-curve and other handcuff graph's or $\theta$-curve's continuous transform of the graph is same, these graphs are \textit{equivalent}. 
+The \textit{generalized Reidemeister move} is used to transfrom a projection of handcuff graphs and $\theta$-curves.\\
 
 \begin{figure*}[h]
     \centerline{\includegraphics[width=0.5\textwidth]{generalized_reidemeister.png}}
@@ -114,8 +126,13 @@ Also, we used some mathematical methods to found out the minimal grid diagrams b
     \label{figure_1} 
 \end{figure*}
 
-\textit{Arc presentation} is an open-book decomposition of $\mathbb{R}^3$ which has open half-planes as pages and the standard z-axis as the binding axis. Every spatial graph $G$ can be embedded in an open-book decomposition with finitely many pages so that it meets each page in exactly one simple arc with two different end-points on the binding axis.
-In knot theory, \textit{arc index}, is the minimal number of pages among all possible arc presentations of graph. This arc presentation with the minimal number of pages is \textit{minimal arc presentation.} \textit{Prime knots} are knots that is not constructed by combining simpler knots. We are finding the arc index for the prime theta-curve and handcuff graph up to seven crossings.\\
+A $\theta$-curve is said to be trivial if it can be embedded in a $2$-sphere in $S^3$ \\
+In the similiar way, a handcuff graph is said to be trivial if 
+
+\begin{defn}
+    \textit{Arc presentation} is an open-book decomposition of $\mathbb{R}^3$ which has open half-planes as pages and the standard z-axis as the binding axis. Every spatial graph $G$ can be embedded in an open-book decomposition with finitely many pages so that it meets each page in exactly one simple arc with two different end-points on the binding axis.
+    In knot theory, \textit{arc index}, is the minimal number of pages among all possible arc presentations of graph. This arc presentation with the minimal number of pages is \textit{minimal arc presentation.} \textit{Prime knots} are knots that is not constructed by combining simpler knots. We are finding the arc index for the prime theta-curve and handcuff graph up to seven crossings.
+\end{defn}
 
 The \textit{grid diagram} is a handcuff graph or theta‐curve diagram of vertical strands and one less number of horizontal strands with the properties that at every crossing the vertical strand crosses over the horizontal strand and no two horizontal segments are co‐linear and no two vertical segments are co‐linear.
 The \textit{Cromwell matrix} is an $n \times n$ binary matrix each of whose rows and columns has exactly two 1s. For theta‐curve and handcuff graph, its Cromwell matrix is an $n \times (n+1)$ binary matrix that exactly two rows (called Three‐rows) has exactly three 1s and rest of the rows and each columns has exactly two 1s.
