--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -241,6 +241,8 @@ A \textit{reduced simple closure of a stacked tangle} is
     \item any two arcs(including line segment) joining by caps have no intersection when view from above
 \end{itemize}
 
+
+
 %\begin{proof}
 %$$\alpha(\theta) \leq c(\theta) + e + b$$ when e is number of edges, b is number of bouquet cut-components. We have 3 edges, 0 bouquet cut-componentes for theta-curves. Therefore, $$\alpha(\theta) \leq c(\theta) + 3.$$
 %\end{proof}
@@ -256,18 +258,10 @@ To distinguish the Cromwell matrices from theta-curves and handcuff graphs, whic
 %The \textit{grid diagram} of a knot is a projection that consists only of horizontal and vertical lines, and the vertical line always passes above the horizontal line. (However, in this case, there must be exactly two points (excluding the vertices) that are vertically bent for each horizontal line (row) and vertical line (column), and the two vertices must be on the horizontal line.)
 %\end{defn}
 
-%\begin{theorem}
-%Every theta-curve and handcuff graph has its corresponding THC-Cromwell matrix.
-%\end{theorem}
-\begin{defn}
-    Let any THC-cromwell matrix G. Consider any Three-row $i$ and its three 1s, $a_{ij}, a_{ik}, a_{il}$, which means that $a_{ij} = a_{ik} = a_{il} = 1$. The \textit{H-deletion Matrix} of the THC-cromwell matrix G is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$ from the matrix G\\
-\end{defn}
-
-\begin{figure*}[h]
-    \centerline{\includegraphics[width=0.5\textwidth]{figure/Hdeletion.png}}
-    \caption{H deletion of THC-matrix of $\theta$-curve $3_1$.}
-    \label{figure_1} 
-\end{figure*}
+\begin{theorem}
+Every theta-curve and handcuff graph has its corresponding THC-Cromwell matrix.
+\end{theorem}
+$\mathbf{Definition}$ Let any Three-row $i$ and its two outer `1's $j$, $k$. The \textit{H-deletion Matrix} of THC-Cromwell matrix is $(n-1)\times(n-1)$ matrix which deleted row $i$ and column $j$, $k$.\\
 
 \subsubsection{Main Theorem}
 \begin{theorem}The given THC-Cromwell matrix is theta-curve if and only if determinant of the H-deletion matrix is $\pm 1$.The given THC-Cromwell matrix is handcuff graph if and only if determinant of the H-deletion matrix is 0 or $\pm 2$.
@@ -275,7 +269,7 @@ To distinguish the Cromwell matrices from theta-curves and handcuff graphs, whic
 
 \begin{proof}
 \begin{enumerate}
-    \item \textbf{Determinant of the cromwell matrices of Knot}\\
+    \item \textbf{Method of changing grid diagram of a knot to simple matrix}\\
     First, we should change grid diagram of a knot into Cromwell matrix. However, we can apply row operation of interchanging the rows. In this way, determinant of the Cromwell matrix would change only by multiplying $\pm 1$.\\
 By applying row operation, we should make matrix such as
     $$\begin{pmatrix} 
@@ -1137,7 +1131,7 @@ The Python Code did not work since the Topoly Library had error of the Yamada po
   \end{figure}
 
 
-\section{Further Researches}
+\section{Conclusion}
 요약, 더 나아가서 어떻게 써먹을 수 있을지?
 
 \section*{References}
